--- a/Ilk_MVC_Projesi/Views/Category/Detail.cshtml
+++ b/Ilk_MVC_Projesi/Views/Category/Detail.cshtml
@@ -1,4 +1,39 @@
 ﻿@model Category
-
+@{
+    var plist = Model.Products;
+}
 <h1>@Model.CategoryName</h1>
-<h3>@Model.Description</h3>
+<h3>@Model.Description </h3>
+<a asp-action="Create" asp-controller="Category" class="btn btn-danger">Yeni Kategori</a>
+
+<div class="row">
+    <div class="col-9">
+        <table class="table-bordered" style="background-color : aquamarine">
+            <thead>
+                <tr>
+                    <th>Ürün Adı</th>
+                    <th>Ürün Fiyatı</th>
+                    <th>Kategori</th>
+                    <th>Siparişleri</th>
+                    <th>Hacim</th>
+                    <th>Detay</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Products)
+                {
+                <tr>
+                    <td>@item.ProductName</td>
+                    <td>@item.UnitPrice</td>
+                    <td>@item.Category.CategoryName</td>
+                    <td style="text-align:center">@item.OrderDetails.Count</td>
+                    <td>@item.OrderDetails.Sum(x=> x.UnitPrice*x.Quantity*(decimal)(1-x.Discount)) $</td>
+                    <td>
+                        <a class="btn btn-block btn-danger" asp-controller="Category" asp-action="Detail" asp-route-id="@item.CategoryId">Detay</a>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
