--- a/Ilk_MVC_Projesi/Views/_ViewImports.cshtml
+++ b/Ilk_MVC_Projesi/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Ilk_MVC_Projesi
 @using Ilk_MVC_Projesi.Models
+@using Ilk_MVC_Projesi.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
