--- a/Ilk_MVC_Projesi/Views/Category/Create.cshtml
+++ b/Ilk_MVC_Projesi/Views/Category/Create.cshtml
@@ -1,11 +1,17 @@
 ﻿@model CategoryViewModel  
 @*ekranda yazılacak şeyleri direkt stün adı olarak almak yerine kendi istediğimiz şeyleri yazması için viewmodel yükledik. daha sonra buradaki model tipini 
 oluşturduğumuz modelin tipine çevirdik. viewimporta da klasörün yerini tanımladık*@
-
+<div class="text-danger">
+    <div asp-validation-summary="All"></div>  @*hata varsa hata mesajını ekrana yazdırıyor.*@
+</div>
 <form method="post" asp-action="Create" asp-controller="Category">
     <label asp-for="CategoryName"></label>
-    <input asp-for="CategoryName" /><br />
+    <input asp-for="CategoryName" />
+    <span class="text-danger" asp-validation-for="CategoryName"></span>
+    <br />
     <label asp-for="Description"></label>
     <input asp-for="Description" />
-    <input type="submit" value="Ekle" class="btn btn-danger"/>
+    <span class="text-danger" asp-validation-for="Description"></span>
+
+    <input type="submit" value="Ekle" class="btn btn-danger" />
 </form>
