--- a/Ilk_MVC_Projesi/Views/Product/Index.cshtml
+++ b/Ilk_MVC_Projesi/Views/Product/Index.cshtml
@@ -1,9 +1,57 @@
 ﻿@model List<Product>
 
-<h1>Products</h1>
-<ul>
-    @foreach (var item in Model)//büyük model ama tipleri aynı
-    {
-        <li>@item.ProductName : @item.UnitPrice</li>
-    }
-</ul>
+<h2>Toplam Kayıt : @Model.Count</h2>
+<div class="row">
+    <div class="col-6">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Kategori Adı</th>
+                    <th>Ürün Adı</th>
+                    <th>Fiyat</th>
+                    <th>Tedarikçi</th>
+                    <th>Detay</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Category?.CategoryName</td> @*category?.catego yapabilirsin. Nullse çalışmaz veya*@
+                        <td>@item.ProductName</td>
+                        <td>@($"{item.UnitPrice:c2}")</td>
+                        <td>@(item.Supplier == null ? Html.Raw(@"<u>Tedarikçisi Yok</u>" ) : item.Supplier.CompanyName)</td>
+                        @*burada da tedarikçisi nullse tedarikçisi yok yazıyor varsa şirket adını yazıyor.Html.Raw() koduna gerek yok ama altını çizili yazdırmak için(<u></u> çiziyor altını) ekledik*@
+                        <td>
+                            <a class="btn btn-dark" asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId">Detay</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+            <input type="button" value="Previous" class="btn btn-dark page" id="btn-onceki" />
+            @ViewBag.Page / @ViewBag.Limit
+            <input type="button" value="Next" class="btn btn-dark page" id ="btn-sonraki" />
+    </div>
+</div>
+@section Scripts{ 
+    <script>
+        var page = @ViewBag.Page;
+        var limit = @ViewBag.Limit;
+    $("#btn-onceki").click(function () {
+        if (page > 1) {
+            page -= 1;
+            var url1 = '@Url.Action("index","Product", new { page = ViewBag.Page - 1})';
+            window.location.href = url1;
+            //var url = "product/index?page=" + page; yol 1
+        }
+    });
+        $("#btn-sonraki").click(function () {
+            console.log("sonraki");
+            if (page < limit) {
+                var url1 = '@Url.Action("index","Product", new { page = ViewBag.Page + 1})';
+                window.location.href = url1;
+            }
+        });
+    </script>
+}
