--- a/Ilk_MVC_Projesi/Views/Product/Detail.cshtml
+++ b/Ilk_MVC_Projesi/Views/Product/Detail.cshtml
@@ -15,23 +15,22 @@
     <div class="col-5">
         <a asp-action="Update" asp-controller="Product" asp-route-id="@Model.ProductId" class="btn btn-danger">Düzenle</a>
     </div>
-    <div class="col"><input type="button" class="btn btn-danger" value="SİL" data-toggle="modal" data-target="#confirm-delete" />SİL</div>
+    <div class="col"><input type="button" class="btn btn-danger" value="SİL" data-toggle="modal" data-target="#confirm-delete" /></div>
 </div>
 <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="myModalLabel">Silme Onayı</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">
                 <p>Ürün silinecektir. Bu işlemi onaylıyor musunuz?</p>
-                <p>Emin misiniz?</p>
                 <p class="debug-url"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Vazgeç</button>
-                <a class="btn btn-danger btn-ok">Sil</a>
+                <a href="product" class="btn btn-danger btn-ok">Sil</a>
             </div>
         </div>
     </div>
