--- a/ItServiceApp/Views/Account/Login.cshtml
+++ b/ItServiceApp/Views/Account/Login.cshtml
@@ -2,9 +2,15 @@
 @{
     ViewBag.Title = "Giriş Yap";
 }
+<!--====== Page Title start ======-->
+<partial name="Partials/_PageTitlePartial" />
+<!--====== Page Title End ======-->
 <!--====== Shoping Checkout Start  ======-->
 <section class="shoping-checkout-area section-gap">
     <div class="container">
+        <div class="user-actions mb-40">
+            <p>Hesabınız yok mu?<a asp-controller="account" asp-action="Register">Kayıt olmak için tıklayın</a></p>
+        </div>
         <form asp-controller="Account" asp-action="Login" method="post">
             <div class="row">
                 <div class="col-lg-12">
@@ -26,14 +32,13 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-lg-6">
                                 <div class="form-group">
                                     <label asp-for="RememberMe"></label>
                                     <input asp-for="RememberMe" />
-                                    <span asp-validation-for="RememberMe" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-6">
                                 <div class="payment-box mt-30">
                                     <input type="submit" class="main-btn" value="Giriş Yap" />
                                 </div>
