Iyzi ve automapper

--- a/ItServiceApp/Views/Account/ConfirmResetPassword.cshtml
+++ b/ItServiceApp/Views/Account/ConfirmResetPassword.cshtml
@@ -1,6 +1,6 @@
-﻿@model PasswordChangeViewModel
+﻿@model ResetPasswordViewModel
 @{
-    ViewBag.Title = "Şifre Değiştirme";
+    ViewBag.Title = "Şifremi Unuttum";
 }
 <!--====== Page Title start ======-->
 <partial name="Partials/_PageTitlePartial" />
@@ -12,19 +12,14 @@
             <div class="text-info">@TempData["Message"]</div> @*hata mesajını yazdırmak için. Ötekilere de ekle*@
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
-        <form asp-controller="Account" asp-action="UpdatePassword" method="post">
+        <form asp-controller="Account" asp-action="ConfirmResetPassword" method="post">
+            <input type="hidden" value="@ViewBag.UserId" id="UserId" name="UserId" />
+            <input type="hidden" value="@ViewBag.Code" id="Code" name="Code" />
             <div class="row">
                 <div class="col-lg-12">
                     <div class="billing-details">
-                        <h3 class="title">Profil Bilgileriniz</h3>
+                        <h3 class="title">Şifre Güncelleme</h3>
                         <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label asp-for="OldPassword"></label>
-                                    <input asp-for="OldPassword" />
-                                    <span asp-validation-for="OldPassword" class="text-danger"></span>
-                                </div>
-                            </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label asp-for="NewPassword"></label>
