--- a/ItServiceApp/Views/Payment/Index.cshtml
+++ b/ItServiceApp/Views/Payment/Index.cshtml
@@ -32,7 +32,7 @@
         <div class="user-actions mb-40">
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
-        <form asp-controller="Index" method="post">
+        <form asp-action="Index" method="post">
             <input asp-for="Installment" type="hidden" id="hdInstallment" value="" />
             <div class="row">
                 <div class="col-lg-6">
