migration updated--sehirler ilçeler eklendi--subscription vs

--- a/ItServiceApp/Areas/Admin/Views/Manage/Users.cshtml
+++ b/ItServiceApp/Areas/Admin/Views/Manage/Users.cshtml
@@ -99,10 +99,16 @@
             {
                     dataField: "createdDate",
                     caption: "Kayıt Tarihi",
-                    dataType: "date",
+                    dataType: "datetime",
                     format: "dd/MM/yyyy HH:mm",
                     sortOrder: "desc"
-                }
+                },
+                {
+                caption: 'Onaylanmış',
+                dataField:"emailConfirmed",
+                //dataType: "string"
+                dataType: "boolean"
+            }
             ]
         }).dxDataGrid("instance");
     });
