--- a/ItServiceApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ItServiceApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <link href="~/admin-assets/css/icons.min.css" rel="stylesheet" />
     <link href="~/admin-assets/css/metisMenu.min.css" rel="stylesheet" />
     <link href="~/admin-assets/css/app.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/vendor/devextreme/dist/css/dx.greenmist.css">
+    <link rel="stylesheet" href="~/vendor/devextreme/dist/css/dx.material.orange.light.css">
     @await RenderSectionAsync("Styles",required:false)
 </head>
 @*v sharper*@
