--- a/ItServiceApp/Views/_ViewImports.cshtml
+++ b/ItServiceApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using ItServiceApp.Models
+﻿@using ItServiceApp.Models.Entities
+@using ItServiceApp.Models
 @using ItServiceApp.ViewModels
 @using Microsoft.AspNetCore.Identity
 @using ItServiceApp.Models.Identity
