--- a/ItServiceApp/Areas/Admin/Views/Manage/SubscriptionTypes.cshtml
+++ b/ItServiceApp/Areas/Admin/Views/Manage/SubscriptionTypes.cshtml
@@ -24,7 +24,7 @@
 @section Scripts{
 <script src="~/vendor/devextreme-aspnet-data/js/dx.aspnet.data.js"></script>
 <script>
-    var daraGrid = null;
+    var dataGrid = null;
     $(()=>{
         var url = '../../../api/SubscriptionTypeApi';
         dataGrid = $("#dxGrid").dxDataGrid({
