--- a/ItServiceApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ItServiceApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@using ItServiceApp.Models
-@using ItServiceApp.ViewModels
+﻿@using ItServiceApp.Core.Entities
+@using ItServiceApp.Core.Payment
+@using ItServiceApp.Core.ViewModels
 @using Microsoft.AspNetCore.Identity
-@using ItServiceApp.Models.Identity
+@using ItServiceApp.Core.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
