--- a/ItServiceApp/Views/Shared/Partials/_HeaderPartial.cshtml
+++ b/ItServiceApp/Views/Shared/Partials/_HeaderPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-between container-1470">
             <div class="header-left">
                 <div class="site-logo">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="Omnivus"></a>
+                    <a href="index.html"><img src="~/assets/img/logo.png" alt="Omnivus"></a>
                 </div>
             </div>
             <div class="header-right d-flex align-items-center justify-content-end">
@@ -100,7 +100,7 @@
                     <div class="nav-link">
                         @if (User.IsInRole("Admin"))
                         {
-                            <a asp-controller="Account" asp-action="Logout">  Admin Paneli</a>
+                            <a href="/Admin/manage/index">Admin</a>
                         }
                         else if (User.IsInRole("User"))
                         {
